# config-cmake-xcodeproj

./: CMakeLists.txt  README.md
scripts/: builder.sh
src/: main.cpp
